test/fail/generic-request-too-many.grace
method name<T> {}

name<type {}, type {}>
